# math

./: README.md  TODO  hello.py  pyproject.toml  readme.md
Textbooks/100 Statistical Tests - Gopal Kanji/: 0. template.ipynb  1. Z-test for population mean.ipynb  10. t-test for two population means by paired comparisons.ipynb  11. t-test of a regression coefficient.ipynb  12. t-test of a correlation coefficient.ipynb  13. Z-test of correlation coefficient.ipynb  14. Z-test of two correlation coefficient.ipynb  15. chi-sq test for population variance.ipynb  16. F-test for two population variances.ipynb  17. F-test for two population variances w correlated obs.ipynb  18. Hotelling’s T2-test for two series of population means.ipynb  19. Discriminant test for the origin of a p-fold sample.ipynb  2. Z-test for two population means with equal variance.ipynb  20. Fisher’s cumulant test for normality of a population.ipynb  21. Dixon's test for outliers.ipynb  22. F-test for K population means (ANOVA).ipynb  23. Z-test for correlated proportions.ipynb  24. chi-sq test for assumed population variance.ipynb  25. F-test for 2 counts (poisson).ipynb  31. Bartlett’s test for equality of K variances.ipynb  (+39 more)
number_theory/: 11_modulo_multiplicative_inverse.ipynb  15_eulers_totient_func.ipynb  16_eulers_totient_func_and_gcd_sum.ipynb  17_segmented_sieve.ipynb  18_common_divisors_in_logn.ipynb  19_non_deterministic_primality_test.ipynb  1_primality_test.ipynb  20_extended_euclidean_algorithm.ipynb  3_prime_factorisation.ipynb  4_binary_exponentiation.ipynb  README.md  pyproject.toml
(+206 files in other folders)
